--- a/index.html
+++ b/index.html
@@ -102,8 +102,17 @@
   </div>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-import { getFirestore }      from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+import {
+  initializeApp
+} from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+import {
+  getFirestore,
+  collection,
+  addDoc,
+  deleteDoc,
+  doc
+} from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
 
 const firebaseConfig = {
   apiKey: "AIzaSyA_unL-ObfYrhswlgJK9BZgDtENRqyeNqk",
